Give correct credit

--- a/info.plist
+++ b/info.plist
@@ -7,11 +7,11 @@
 	<key>contactName</key>
 	<string>Tony Richards</string>
 	<key>description</key>
-	<string>This bundle enables indented soft wrap. For it to work, TextMate's soft wrap setting must be turned on already. The code was taken from here:
+	<string>This enables indented soft wrap in TextMate 2. For it to work, TextMate's soft wrap setting must be turned on already. The code was taken from here:
 
 http://lists.macromates.com/textmate/2012-August/035181.html
 
-All credit to Anthony Pulido, I simply turned this into a bundle for easier installation.</string>
+All credit to Allan Odgaard and Anthony Pulido, I simply turned this into a bundle for easier installation.</string>
 	<key>name</key>
 	<string>Indented Soft Wrap</string>
 	<key>uuid</key>
